ajout des pages

--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <title>Blog bootstrap</title>
 </head>
+<!--fin Head-->
+<!-- debut boody -->
 <body>
     <div class="container-fluid">
         <div class="row">
             <!--nav bar-->
-            <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark" 
+            <nav id="navbar" class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark" 
             style="opacity: 80%; z-index: 2;
             position: fixed;
             top: 0;
-            transition: top 0.3s;">
+            transition: top 0.8s;">
                 <div class="container">
-                  <a class="navbar-brand me-5 fs-4" href="#"> 
-                    <img src="./images/logo2.png" alt="" width="80" height="40">
+                  <a class="navbar-brand me-5 fs-4" href="index.html"> 
+                    <img src="./images/logo2.png" alt="logo voyage" width="80" height="40">
                      Voyage Avec Nous
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,16 +35,16 @@
                         <a class="nav-link active" aria-current="page" href="#">BEST-OF</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">STORIES</a>
+                        <a class="nav-link" href="stories.html">STORIES</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">VANLIFE</a>
+                        <a class="nav-link" href="vanlife.html">VANLIFE</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">BLOG</a>
+                        <a class="nav-link" href="blog.html">BLOG</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">NEWSLETTER</a>
+                        <a class="nav-link" href="newsletter.html">NEWSLETTER</a>
                       </li>
                     </ul>
                     <form class="d-flex">
@@ -54,20 +56,19 @@
               </nav>
             <!--Fin nav bar-->
             <!--Image background-->
-            <img class="img-fluid" src="./images/peru-andes.jpg" alt="" style="z-index: 1;
-            position: relative;">
-            <!--Fin Image background-->
-            <!--Citation-->
-            <blockquote class="blockquote" 
-            style="position: absolute;
-            z-index: 2;
-            text-align: center;
-            margin-top: 12em;">
-                 <p class="fs-2 text-light" 
-                    ><strong>"Voyager vous laisse sans voix avant de vous transformer en conteur"</strong></p>
+            <div style="background-image: url(./images/peru-andes.jpg);
+            height: 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;">
+            <blockquote class="blockquote d-flex align-items-center justify-content-center" style="height: 48em;" >
+                <div class="mb-5 text-center">
+                    <p class="fs-2 text-light mb-0"><strong>"Voyager vous laisse sans voix avant de vous transformer en conteur"</strong></p>
                     <p class="text-light"><em>Citation : d'Ibn Battuta</em></p>
+                </div>
             </blockquote>
-           
+            </div>
+            <!--Fin Image background-->
         </div>
         <main>
             <div class="container">
@@ -79,10 +80,10 @@
                 </div>
                 <div class="row">
                     <div class="col-6">
-                        <p class="fs-5 me-4">
+                        <p class="fs-5 me-4 text-secondary">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec iaculis eros ut vehicula malesuada. Aliquam luctus metus sapien a malesuada leo accumsan at Orci varius.
                         </p>
-                        <p class="fs-5 me-4">
+                        <p class="fs-5 me-4 text-secondary">
                             Nulla ut velit accumsan, porta urna ac, egestas est. Quisque ipsum nisi, dictum pulvinar efficitur nec, interdum et enim. Donec quis nisl nec odio tempor convallis.
                         </p>
                     </div>
@@ -203,5 +204,6 @@
             </Footer>
         </div>
     </div>
+    <script type="text/JavaScript" src="js/navscroll.js"></script>
 </body>
 </html>
